--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ crossorigin="anonymous"></script>
             }
             //const line = new THREE.Line( geometry, material );
             addTonnetz(scene);
-            AMSynth = newAMSynth();
+            AMSynth = newSynth();
             //console.log(camera);
             let piano = newPiano();
     
