--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ crossorigin="anonymous"></script>
             addTonnetz(scene);
             AMSynth = newSynth();
             console.log(keys_obj);
-            let piano = newPiano();
+            let piano = newPiano(window.location.href);
     
             var renderer = new THREE.WebGLRenderer({antialias:true});
             renderer.setSize(window.innerWidth, window.innerHeight);          
@@ -443,13 +443,6 @@ crossorigin="anonymous"></script>
 
             window.addEventListener( 'resize', on_window_resize, false );
         </script>
-
-    <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-    </script>
-    <script type="text/javascript">
-    _uacct = "UA-302418-4";
-    urchinTracker();
-    </script>
 
     <!--script type="text/javascript">
     var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
