--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ crossorigin="anonymous"></script>
             camera.position.y = 6.51;
 
             var cameraControls = new THREE.OrbitAndPanControls(camera, renderer.domElement);
-            cameraControls.target.set(6,0,0);
+            cameraControls.target.set(6,0,-2);
 
             var clock = new THREE.Clock();
 
